--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -19,7 +19,9 @@
   <router-outlet class="theme2-other"></router-outlet>
   </main>
 
-  <footer>
-    <!-- Contenuto del tuo footer -->
+  <footer class="rf-zoom">
+    <button class="zoom-in" (click)="increaseFontSize()">+</button>
+    <button class="zoom-out" (click)="decreaseFontSize()">-</button>
   </footer>
+
 </body>
