--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.css
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.css
@@ -1,39 +1,40 @@
 .dialog-window {
+  display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   font-family: Calibri;
   font-size: 20px;
-  height: 100%;
   background-color: white;
 }
 
+.dialog-content-wrapper {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+}
 
-.list{
+.list {
   margin-left: 10px;
 }
 
-
-.close{
+.close {
   float: right;
-
 }
 
-
-.title-dialog{
-  margin: 20px;
+.title-dialog {
+  margin-bottom: 20px;
   font-family: serif;
   font-size: 30px;
 }
 
-.rent-button{
+.rent-button {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin-top: 20px;
 }
 
-.button-rent{
+.button-rent {
   font-size: large;
   margin-bottom: 2px;
 }
@@ -42,11 +43,22 @@
   .dialog-window {
     overflow-y: auto;
   }
-  .title-dialog{
+  .title-dialog {
     font-size: 20px;
   }
-
   .button-rent {
     font-size: medium;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  .dialog-window {
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: auto;
+  }
+  .dialog-content-wrapper {
+    max-width: 600px;
+    margin: 0 auto;
   }
 }
