--- a/rent_film/rent_film_app/src/app/registration/registration.component.html
+++ b/rent_film/rent_film_app/src/app/registration/registration.component.html
@@ -1,30 +1,35 @@
 <div class="registration">
   <mat-card>
-    <mat-card-title  class="card-title">
-      <strong>Registration</strong>
+    <mat-card-title class="card-title">
+      <p><strong>Registration</strong> </p>
     </mat-card-title>
     <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="register()">
+      <form [formGroup]="form" (ngSubmit)="register()" aria-label="form-registration">
         <mat-form-field>
-          <input matInput placeholder="Customer ID" formControlName="customer_id">
+          <label for="customer_id">Customer ID:</label>
+          <input matInput  formControlName="customer_id" id="customer_id">
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="First Name" formControlName="first_name">
+          <label for="first_name">First Name:</label>
+          <input matInput  formControlName="first_name" id="first_name">
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Last Name" formControlName="last_name">
+          <label for="last_name">Last Name:</label>
+          <input matInput formControlName="last_name" id="last_name">
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Email" formControlName="email">
+          <label for="email">Email:</label>
+          <input matInput  formControlName="email" id="email">
           <mat-error *ngIf="form.controls['email'].hasError('required')">Email is required</mat-error>
           <mat-error *ngIf="form.controls['email'].hasError('email')">Invalid email</mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Password" formControlName="password" type="password">
+          <label for="password">Password:</label>
+          <input matInput formControlName="password" type="password" id="password">
           <mat-error *ngIf="form.controls['password'].hasError('required')">Password is required</mat-error>
           <mat-error *ngIf="form.controls['password'].hasError('minlength')">Password must be at least 6 characters</mat-error>
         </mat-form-field>
