--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,12 +1,11 @@
 <div class="search">
   <div class="serach-content"
     [style.background-color]="coloreCard" >
-    <div><p><strong>Spesa totale:</strong> {{ totalAmount}}
+    <div>
+      <p tabindex="0"><strong>Spesa totale:</strong> {{ totalAmount}}</p>
     </div>
   </div>
 </div>
-
-
 
 <div class="button-row" >
   <span style="text-align: center; color:black">Opzioni di ordinamento:  </span>
@@ -21,46 +20,41 @@
   </div>
 </div>
 
-
-
-
-
-
 <section class="table-container">
-<table class="table" mat-table  [dataSource]="rentals" matSort  (matSortChange)="sortData($event)">
-<!-- Colonna Film -->
-<ng-container matColumnDef="film">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Film </th>
-  <td mat-cell *matCellDef="let rental"> {{ rental.film.title }} </td>
-</ng-container>
+  <table class="table" mat-table  [dataSource]="rentals" matSort  (matSortChange)="sortData($event)" aria-label="rentals table" role="table">
+  <!-- Colonna Film -->
+  <ng-container matColumnDef="film">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header role="t"> Film </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.film.title }} </td>
+  </ng-container>
 
-<!-- Colonna Indirizzo -->
-<ng-container matColumnDef="address">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Indirizzo </th>
-  <td mat-cell *matCellDef="let rental"> {{ rental.address.address }} </td>
-</ng-container>
+  <!-- Colonna Indirizzo -->
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Indirizzo </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.address.address }} </td>
+  </ng-container>
 
-<!-- Colonna Pagamento -->
-<ng-container matColumnDef="payment">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagamento </th>
-  <td mat-cell *matCellDef="let rental"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
-</ng-container>
+  <!-- Colonna Pagamento -->
+  <ng-container matColumnDef="payment">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagamento </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
+  </ng-container>
 
-<!-- Colonna Noleggio -->
-<ng-container matColumnDef="rental">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Data noleggio </th>
-  <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
-</ng-container>
+  <!-- Colonna Noleggio -->
+  <ng-container matColumnDef="rental">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Data noleggio </th>
+    <td mat-cell *matCellDef="let rental"> {{ rental.rental.rental_date }} </td>
+  </ng-container>
 
-<!-- Colonna Noleggio -->
-<ng-container matColumnDef="action">
-  <th mat-header-cell *matHeaderCellDef> Action </th>
-  <td mat-cell *matCellDef="let rental"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
-</ng-container>
+  <!-- Colonna Noleggio -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Action </th>
+    <td mat-cell *matCellDef="let rental"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
+  </ng-container>
 
-<!-- Definizione delle colonne -->
-<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-<tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
-</table>
+  <!-- Definizione delle colonne -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
+  </table>
 
 </section>
