--- a/rent_film/rent_film_app/src/app/app.component.css
+++ b/rent_film/rent_film_app/src/app/app.component.css
@@ -1,10 +1,11 @@
-html {
-  font-size: 100%;
-  transition: font-size 0.3s ease;
+.light {
+  background-color: #ffffff;
+  color: #000000;
 }
 
-@media screen and (max-width: 768px) {
-  html {
-    font-size: 80%; /* Adatta la dimensione del testo per dispositivi con larghezza massima di 768px */
-  }
+.dark {
+  background-color: #1f1f1f;
+  color: #ffffff;
 }
+
+
