--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.css
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.css
@@ -1,15 +1,13 @@
-.search{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+.princ{
+  display: block;
 }
 
+
 .serach-content{
-  display: block;
-  width: 300px;
-  margin-top: 15px;
-  padding: 15px;
+  text-align: center;
+  margin-right: 250px;
+  margin-left: 250px;
+  margin-bottom: 30px;
   border-radius: 60px;
   border: 1px solid black;
 }
@@ -29,29 +27,44 @@ mat-icon{
   margin-right: 10px;
 }
 
+.cont{
+  border: 1px solid red;
+}
+
+
+.princ{
+  border: 1px solid red;
+}
+
+
 
 /* Stili per la tabella */
 .table-container {
-  max-width: 100%; /* Assicura che la tabella non superi la larghezza massima del contenitore */
-  overflow-x: auto; /* Abilita lo scorrimento orizzontale se la tabella supera la larghezza del contenitore */
-
+  max-width: 100%;
   font-size: 12px;
 }
 
-table.table {
-  width: 30px; /* Imposta la larghezza della tabella al 100% del contenitore */
-}
 
-table.table td,
-table.table th {
-  white-space: nowrap; /* Evita il wrapping del testo nelle celle */
-  padding: 8px; /* Imposta il padding delle celle */
+/* Media query per la larghezza della schermata inferiore a 600px */
+@media (max-width: 700px) {
+
+  .serach-content{
+    margin-right: 90px;
+    margin-left: 90px;
+  }
+
 }
 
 /* Media query per la larghezza della schermata inferiore a 600px */
-@media (max-width: 600px) {
-  table.table {
-    font-size: 12px; /* Riduci la dimensione del font del testo nella tabella */
+@media (max-width: 560px) {
+
+  .serach-content{
+    margin-right: 30px;
+    margin-left: 30px;
   }
+  .custom-column {
+    font-size: 10px;
+  }
+
 }
 
