--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -14,7 +14,7 @@
 
   <main >
   <!--attiva la componente che verrà chiamata con router link -->
-  <router-outlet class="theme2-other"></router-outlet>
+  <router-outlet class="component-style"></router-outlet>
   </main>
 
   <footer>
