--- a/rent_film/rent_film_app/src/app/rent-details/rent-details.component.html
+++ b/rent_film/rent_film_app/src/app/rent-details/rent-details.component.html
@@ -1,5 +1,5 @@
-<div class="dialog-window" [ngClass]="currentTheme">
-  <div class="title"  [style.background-color]="coloreCard" [style.color]="coloreTextCard">
+<div class="dialog-window">
+  <div class="title"  >
     <mat-card-actions >
 
       <button mat-button (click)="closeDialog()">
