--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,5 +1,5 @@
-<div class="login" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
-  <mat-card  [style.background-color]="coloreCard" [style.color]="coloreTextCard" >
+<div class="login"  fxLayout="column" fxLayoutAlign="center center">
+  <mat-card >
     <mat-card-title class="card-title">
       <strong>{{film.film.title}}</strong>
       <br>
