--- a/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
+++ b/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
@@ -1,26 +1,22 @@
-<mat-toolbar [ngClass]="currentTheme" [style.color]="coloreText" role="toolbar" aria-label="app-toolbar" aria-orientation="horizontal" >
+<mat-toolbar class="component-style" role="toolbar" aria-label="app-toolbar" aria-orientation="horizontal" >
 
   <button  mat-button (click)="home()" aria-label="back home" role="button" title="Clicca qui per tornare alla lista dei film" tabindex="0">
-    <h1 class="home zoom">DVD Rent </h1>  </button>
+    <h1 >DVD Rent </h1>  </button>
   <span class="spacer"></span>
 
-  <button  mat-button (click)="rentalList()" role="button" class="zoom" aria-label="logout button" title="Clicca qui per aprire i tuoi noleggi">
+  <button  mat-button (click)="rentalList()" role="button" aria-label="logout button" title="Clicca qui per aprire i tuoi noleggi">
       <mat-icon>
         <span aria-hidden="true">list_alt</span>
       </mat-icon >
       <span >Noleggi </span>
   </button>
 
-  <button mat-button (click)="logout()" role="button" class="zoom" aria-label="your rentals button" title="Clicca qui per fare il logout">
+  <button mat-button (click)="logout()" role="button" aria-label="your rentals button" title="Clicca qui per fare il logout">
     <mat-icon>
       <span aria-hidden="true">logout</span>
     </mat-icon >
     <span>Log out </span>
   </button>
-
-
-  <mat-slide-toggle #slideToggler [(ngModel)]="isDarkTheme" (change)="setValue( $event )">{{ slideToggler.checked ? 'Light' : 'Dark' }}</mat-slide-toggle>
-
 
 </mat-toolbar>
 
