--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -8,7 +8,7 @@
 </head>
 <body [ngClass]="currentTheme" >
   <header >
-    <toolbar #toolbar ></toolbar>
+    <toolbar #toolbar class="component-style"></toolbar>
   </header>
 
 
