--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -7,19 +7,19 @@
 
         <form [formGroup]="form" (ngSubmit)="login()" role="form" aria-label="login-form" class="login_">
 
-          <mat-form-field>
+          <mat-form-field >
             <input matInput placeholder="Username" formControlName="email" [(ngModel)]="email" name="email" aria-label="Username">
           </mat-form-field>
 
-          <mat-form-field>
+          <mat-form-field >
             <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password" type="password" aria-label="Password">
           </mat-form-field>
 
           <div class="div_button">
-            <button mat-raised-button color="primary" type="submit" role="button" title="Clicca qui per effettuare il login" aria-describedby="error-message">Login</button>
-            <button mat-raised-button color="primary" [routerLink]="['/registration']" role="button" title="Clicca qui per registrare un nuovo utente">Registrati</button>
+            <button mat-raised-button type="submit" role="button" title="Clicca qui per effettuare il login" aria-label="login-button">Login</button>
+            <button mat-raised-button [routerLink]="['/registration']" role="button" title="Clicca qui per registrare un nuovo utente" aria-label="register-button">Registrati</button>
           </div>
-          <ul *ngIf="errors.length > 0" class="error-message" id="error-message">
+          <ul *ngIf="errors.length > 0" class="error-message" >
             <li *ngFor="let error of errors">{{ error }}</li>
         </ul>
 
