--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,32 +1,40 @@
-<div class="login"  fxLayout="column" fxLayoutAlign="center center">
+
+<div class="component-style"  fxLayout="column" fxLayoutAlign="center center">
   <mat-card >
     <mat-card-title class="card-title">
       <strong>{{film.film.title}}</strong>
       <br>
     </mat-card-title>
     <mat-card-content >
-      <p><label id="label_data"><strong>When do you want to start your rental?</strong></label></p>
-        <mat-radio-group  aria-labelledby="radio-group-data" role="radiogroup" class="data-radio-group" [(ngModel)]="data_selected">
-          <mat-radio-button class="radio-group-data" role="radio" *ngFor="let data of data_group" [value]="data">{{data}}</mat-radio-button>
-        </mat-radio-group>
-        <br>
-        <br>
+      <form [formGroup]="form" (ngSubmit)="rent()"> 
 
-        <p><label id="label_store"><strong>Select a store:</strong> </label></p>
-        <mat-radio-group aria-labelledby="radio-group-stores" role="radiogroup" class="store-radio-group" [(ngModel)]="store_selected" >
-          <mat-radio-button class="radio-group-stores" role="radio" *ngFor="let store of stores" [value]="store.store.store_id"  [disabled]="!store.num_film">
-            {{store.address.address}}
-          </mat-radio-button>
-        </mat-radio-group>
-        <br>
-        <br>
-
-
-      <button mat-raised-button color="accent" type="submit" aria-describedby="error-message" (click)="rent()">Noleggia</button>
-      <ul *ngIf="errors.length > 0" class="error-message" id="error-message">
-          <li *ngFor="let error of errors">{{ error }}</li>
-      </ul>
-    </mat-card-content>
-
-  </mat-card>
+        <mat-form-field  > 
+          <mat-label aria-label="Select a date for rent">Select a date for rent</mat-label> 
+          <mat-select #dayOption formControlName="data"  > 
+            <mat-option  value="today"  (click)="click_data(true)">Today</mat-option> 
+            <mat-option  value="in-two-days"  (click)="click_data(true)">In two days</mat-option> 
+          </mat-select> 
+        </mat-form-field> 
+ 
+        <mat-form-field > 
+          <mat-label aria-label="Select a store">Select a store</mat-label> 
+          <mat-select formControlName="store" > 
+            <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film" (click)="click_store(matOption.selected)" >{{store.address.address}}</mat-option> 
+          </mat-select> 
+        </mat-form-field> 
+        <br> 
+ 
+        <button mat-raised-button  type="submit" aria-describedby="error-message" (click)="rent()">Rent</button>
+          <ul *ngIf="errors.length > 0" class="error-message" id="error-message">
+              <li *ngFor="let error of errors">{{ error }}</li>
+          </ul>
+ 
+ 
+    </form> 
+    </mat-card-content> 
+ 
+  </mat-card> 
 </div>
+
+
+
