--- a/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
+++ b/rent_film/rent_film_app/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="component-style" role="toolbar" aria-label="app-toolbar" aria-orientation="horizontal" >
+<mat-toolbar role="toolbar" aria-label="app-toolbar" aria-orientation="horizontal" >
 
   <button  mat-button (click)="home()" aria-label="back home" role="button" title="Clicca qui per tornare alla lista dei film" tabindex="0">
     <h1 >DVD Rent </h1>  </button>
