--- a/rent_film/rent_film_app/src/styles.css
+++ b/rent_film/rent_film_app/src/styles.css
@@ -2,10 +2,28 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .component-style mat-card{
-  background-color: gray;
-  color:black;
+  background-color: #001F99;
+  color:#EDEDED;
 }
 .component-style mat-toolbar{
-  background-color: gray;
+  background-color: #001F99;
+  color:#EDEDED;
+}
+
+.component-style mat-label{
+  color: black;
+}
+
+.registration mat-card{
+  border: 2px solid black;
+}
+
+.registration label{
   color:black;
+}
+
+.component-style .item{
+  background-color: #EDEDED;
+  color:black;
+  border: 2px solid black;
 }
