--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="content" >
+<div class="content component-style" >
   <mat-form-field class="field">
     <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film" (input)="onSearchTitleChange($event)" />
     <mat-icon matPrefix aria-hidden="true">search</mat-icon>
@@ -16,7 +16,7 @@
 
 </div>
 
-<div role="list">
+<div role="list" class="component-style">
   <mat-card class="item" role="listitem" aria-label="Films items" *ngFor="let film of films | slice: startIndex: endIndex" >
     <mat-card-header>
       <mat-card-title class="title" aria-label="Film title">
