--- a/rent_film/rent_film_app/src/app/registration/registration.component.css
+++ b/rent_film/rent_film_app/src/app/registration/registration.component.css
@@ -1,72 +1,76 @@
-.registration {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 30px;
-  padding: 20px;
-  color: black;
+.registration { 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  max-width: 600px; 
+  margin: 0 auto; 
+  margin-top: 30px; 
+  padding: 20px; 
+} 
+ 
+mat-card { 
+  width: 100%; 
+  padding: 20px; 
+  box-sizing: border-box; 
+} 
+ 
+ 
+.card-title { 
+  text-align: center; 
+  margin-bottom: 20px; 
+  font-size: 30px; 
+} 
+ 
+.card-content { 
+  text-align: center; 
+} 
+ 
+form { 
+  display: flex; 
+  flex-direction: column; 
+} 
+ 
+ 
+button[type="submit"] { 
+  width: 100%; 
+} 
+ 
+.error-message { 
+  color: red; 
+  text-align: center; 
+} 
+ 
+/* Responsive styles */ 
+ 
+@media (max-width: 600px) { 
+  .login{ 
+    padding: 10px; 
+  } 
+ 
+  mat-card { 
+    padding: 10px; 
+  } 
+ 
+  .card-title { 
+    font-size: 20px; 
+  } 
+ 
+  .card-content { 
+    font-size: 14px; 
+  } 
+} 
+
+ul.error-message {
+  list-style: none;
+  color:white;
 }
-
-mat-card {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-
-.card-title {
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 30px;
-}
-
-.card-content {
-  text-align: center;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-
-button[type="submit"] {
-  width: 100%;
-}
-
-.error-message {
-  color: red;
-  text-align: center;
-}
-
-/* Responsive styles */
-
-@media (max-width: 600px) {
-  .login{
-    padding: 10px;
-  }
-
-  mat-card {
-    padding: 10px;
-  }
-
-  .card-title {
-    font-size: 20px;
-  }
-
-  .card-content {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 400px) {
-  .card-title {
-    font-size: 18px;
-  }
-
-  .card-content {
-    font-size: 12px;
-  }
+ 
+@media (max-width: 400px) { 
+  .card-title { 
+    font-size: 18px; 
+  } 
+ 
+  .card-content { 
+    font-size: 12px; 
+  } 
 }
