--- a/rent_film/rent_film_app/src/app/registration/registration.component.html
+++ b/rent_film/rent_film_app/src/app/registration/registration.component.html
@@ -1,43 +1,43 @@
-<div class="registration">
-  <mat-card>
-    <mat-card-title class="card-title">
-      <p><strong>Registration</strong> </p>
-    </mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="register()" aria-label="form-registration">
-        <mat-form-field>
-          <label for="customer_id">Customer ID:</label>
-          <input matInput  formControlName="customer_id" id="customer_id">
-        </mat-form-field>
+<div class="registration component-style"> 
+  <mat-card> 
+    <mat-card-title class="card-title"> 
+      <p><strong>Registration</strong> </p> 
+    </mat-card-title> 
+    <mat-card-content> 
+      <form [formGroup]="form" (ngSubmit)="register()" aria-label="form-registration"> 
+        <mat-form-field> 
+          <label for="customer_id">Customer ID:</label> 
+          <input matInput  formControlName="customer_id" id="customer_id"> 
+        </mat-form-field> 
+ 
+        <mat-form-field> 
+          <label for="first_name">First Name:</label> 
+          <input matInput  formControlName="first_name" id="first_name"> 
+        </mat-form-field> 
+ 
+        <mat-form-field> 
+          <label for="last_name">Last Name:</label> 
+          <input matInput formControlName="last_name" id="last_name"> 
+        </mat-form-field> 
+ 
+        <mat-form-field> 
+          <label for="email">Email:</label> 
+          <input matInput  formControlName="email" id="email"> 
+        </mat-form-field> 
+ 
+        <mat-form-field> 
+          <label for="password">Password:</label> 
+          <input matInput formControlName="password" type="password" id="password"> 
+        </mat-form-field> 
+        <br> 
+        
+        <button mat-raised-button type="submit" role="button" title="Clicca qui per effettuare la registrazione" aria-label="registration-button">Registrati</button>
 
-        <mat-form-field>
-          <label for="first_name">First Name:</label>
-          <input matInput  formControlName="first_name" id="first_name">
-        </mat-form-field>
+        <ul *ngIf="errors.length > 0" class="error-message">
+            <li *ngFor="let error of errors">{{ error }}</li>
+        </ul>
 
-        <mat-form-field>
-          <label for="last_name">Last Name:</label>
-          <input matInput formControlName="last_name" id="last_name">
-        </mat-form-field>
-
-        <mat-form-field>
-          <label for="email">Email:</label>
-          <input matInput  formControlName="email" id="email">
-          <mat-error *ngIf="form.controls['email'].hasError('required')">Email is required</mat-error>
-          <mat-error *ngIf="form.controls['email'].hasError('email')">Invalid email</mat-error>
-        </mat-form-field>
-
-        <mat-form-field>
-          <label for="password">Password:</label>
-          <input matInput formControlName="password" type="password" id="password">
-          <mat-error *ngIf="form.controls['password'].hasError('required')">Password is required</mat-error>
-          <mat-error *ngIf="form.controls['password'].hasError('minlength')">Password must be at least 6 characters</mat-error>
-        </mat-form-field>
-
-        <button mat-raised-button color="accent" type="submit">Registrati</button>
-        <br>
-
-      </form>
-    </mat-card-content>
-  </mat-card>
+      </form> 
+    </mat-card-content> 
+  </mat-card> 
 </div>
