--- a/rent_film/rent_film_app/src/app/rent/rent.component.css
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.css
@@ -1,4 +1,4 @@
-.login {
+.component-style {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +38,6 @@ button[type="submit"] {
 }
 
 .error-message {
-  color: red;
   text-align: center;
 }
 
