--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,58 +1,54 @@
-<div class="princ" >
+<div class="button-row"  > 
+  <div class="serach-content"> 
+    <p tabindex="0"><strong>Spesa totale:</strong> {{ totalAmount}}</p> 
+  </div> 
+  <span style="text-align: center;" >Opzioni di ordinamento:  </span> 
+  <br> 
+  <br> 
+  <div class="button-container" *ngFor="let column of columns_title; let i = index"> 
+    <button mat-raised-button mat-button [matMenuTriggerFor]="menu">{{ column }}</button> 
+    <mat-menu #menu="matMenu"> 
+      <button mat-menu-item role="menuitem" (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button> 
+      <button mat-menu-item role="menuitem"  (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button> 
+    </mat-menu> 
+  </div> 
+</div> 
 
-  <div class="button-row"  >
-    <div class="serach-content">
-      <p tabindex="0"><strong>Spesa totale:</strong> {{ totalAmount}}</p>
-    </div>
-    <span style="text-align: center;" >Opzioni di ordinamento:  </span>
-    <br>
-    <br>
-    <div class="button-container" *ngFor="let column of columns_title; let i = index">
-      <button mat-raised-button mat-button [matMenuTriggerFor]="menu">{{ column }}</button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item role="menuitem" (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button>
-        <button mat-menu-item role="menuitem"  (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button>
-      </mat-menu>
-    </div>
-  </div>
+<section class="table-container"  > 
+<table class="table" role="table" mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)" aria-label="rentals table" > 
+<!-- Colonna Film --> 
+<ng-container matColumnDef="film" > 
+  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title"> Film </th> 
+  <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.film.title }} </td> 
+</ng-container> 
 
-<section class="table-container"  >
-  <table class="table" role="presentation" mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)" aria-label="rentals table" >
-  <!-- Colonna Film -->
-  <ng-container matColumnDef="film" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-column"> Film </th>
-    <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.film.title }} </td>
-  </ng-container>
+<!-- Colonna Indirizzo --> 
+<ng-container matColumnDef="address" > 
+  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title"> Address </th> 
+  <td mat-cell *matCellDef="let rental"class="custom-column"> {{ rental.address.address }} </td> 
+</ng-container> 
 
-  <!-- Colonna Indirizzo -->
-  <ng-container matColumnDef="address" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-column"> Indirizzo </th>
-    <td mat-cell *matCellDef="let rental"class="custom-column"> {{ rental.address.address }} </td>
-  </ng-container>
+<!-- Colonna Pagamento --> 
+<ng-container matColumnDef="payment" > 
+  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title"> Payment </th> 
+  <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td> 
+</ng-container> 
 
-  <!-- Colonna Pagamento -->
-  <ng-container matColumnDef="payment" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-column"> Pagamento </th>
-    <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
-  </ng-container>
+<!-- Colonna Noleggio --> 
+<ng-container matColumnDef="rental" > 
+  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title">Data</th> 
+  <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.rental.rental_date }} </td> 
+</ng-container> 
 
-  <!-- Colonna Noleggio -->
-  <ng-container matColumnDef="rental" class="custom-column">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-column"> Data noleggio </th>
-    <td mat-cell *matCellDef="let rental" class="custom-column"> {{ rental.rental.rental_date }} </td>
-  </ng-container>
+<!-- Colonna Dettagli --> 
+<ng-container matColumnDef="action" > 
+  <th mat-header-cell *matHeaderCellDef class="custom-title"> Action </th> 
+  <td mat-cell *matCellDef="let rental"> <button mat-button class="button-details" (click)="openDetails(rental)">Details</button>  </td> 
+</ng-container> 
 
-  <!-- Colonna Noleggio -->
-  <ng-container matColumnDef="action" >
-    <th mat-header-cell *matHeaderCellDef class="custom-column"> Action </th>
-    <td mat-cell *matCellDef="let rental" class="custom-column"> <button mat-button (click)="openDetails(rental)">Dettagli</button>  </td>
-  </ng-container>
-
-  <!-- Definizione delle colonne -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
-  </table>
+<!-- Definizione delle colonne --> 
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> 
+<tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr> 
+</table> 
 
 </section>
-
-</div>
